@@ -30,7 +30,8 @@ test {
 			'--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
 			'--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
 			'--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-			'--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+			'--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+			'--add-opens=java.base/java.lang=ALL-UNNAMED'
 		]
 		jvmArgs args
 	}
